[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Players/Player Base/player_sprite.tres" type="Texture" id=1]
[ext_resource path="res://Entities/Players/Player Base/Player.gd" type="Script" id=2]
[ext_resource path="res://Entities/Projectiles/Projectile Player/ProjectilePlayer.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 4 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
collision_mask = 33
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CannonMuzzle" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="ProjectileContainer" type="Node" parent="."]

[node name="ProjectilePlayer" parent="ProjectileContainer" instance=ExtResource( 3 )]
position = Vector2( 0, -16 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.5
[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_Hitbox_area_shape_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
